# oz_by_test

./: pyproject.toml
oz_by/model/pages/: application.py
tests/: test_cart_page.py  test_favorites_page.py  test_main_page.py  test_search_page.py
